--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container{
-	max-width: 736px;
+	max-width: 1200px;
 	margin: 0 20px;
     display: flex;
     justify-content: center;
@@ -55,8 +55,8 @@ p {
 /*The widths are in a percentage!*/
 header {
 	height: auto;
-	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
+    border-bottom: 3px solid #77a466;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
@@ -66,7 +66,8 @@ header {
 header h1 {
 	float: left;
 	margin: 0;
-	padding: 38px 0;
+	padding-top: 38px;
+    border-bottom: 3px solid #77a466;
 }
 header h1 span {
 	color: #77a466;
@@ -74,7 +75,7 @@ header h1 span {
 
 header nav {
 	float: right;
-	padding: 46px 0;
+    padding: 20px 0;
 }
 header nav ul {
 	margin: 0;
