--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
+html {
+    font-size: 16px;
+}
+
 @font-face{
 	font-family: 'Wisdom Script';
 	src: url('../fonts/wisdom-script.otf') format('opentype');
-}
-
-html {
-    font-size: 16px;
 }
 
 body {
@@ -13,7 +13,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
 }
 
 .container{
@@ -51,21 +50,24 @@ p {
 	line-height: 21px;
     padding: 0 30px;
 }
-
+ul {
+    margin: 0;
+}
 /*The widths are in a percentage!*/
 header {
-	height: auto;
-	margin: 0 auto;
     border-bottom: 3px solid #77a466;
+    text-align: center;
+    width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-flow: row wrap;
 }
 
 header h1 {
-	float: left; 
 	margin: 0;
-	padding-top: 38px;
+    width: 100%;
+	padding: 38px 20px 20px 20px;
     border-bottom: 3px solid #77a466;
 }
 header h1 span {
@@ -73,7 +75,7 @@ header h1 span {
 }
 
 header nav {
-	float: right;
+    width: 100%;
     padding: 20px 0;
 }
 header nav ul {
@@ -85,10 +87,8 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 0.875em;
-	padding: 10px;
-    display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
+	padding: 10px 0;
+    list-style: none;
 }
 
 header nav ul li a{
@@ -99,27 +99,17 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
-	clear: both;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
     align-items: center;
 }
 
-.main-image {
-	height: auto;
-	float: left;
-}
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	height: auto;
-	float: left;
-}
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
@@ -128,24 +118,14 @@ header nav ul li a{
 .main-title p {
 	padding: 0;
 	font-size: 1em;
-	line-height: 25px;
+	line-height: 1.6;
 }
 
 .section-one,
 .section-two,
 .section-three {
 	width: 100%;
-	height: auto;
-	float: left;
 	border-top: 1px solid #eee;
-}
-
-.section-one h4 {
-	padding: 10px 0;
-}
-
-.section-three {
-    border-bottom: 3px solid #eee;
 }
 
 /***** .section-two {
@@ -170,23 +150,23 @@ header nav ul li a{
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
+	line-height: 1.3125;
 }
 
 .address {
 	font-size: 1em;
-	line-height: 24px;
+	line-height: 1.5;
 }
 
 /*The widths are in a percentage!*/
 footer {
-	height: 50px;
-	margin: 0 auto;
-	clear: both;
+	width: 100%;
 	text-align: center;
+    border-top: 3px solid #eee;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-flow: row wrap;
 }
 footer span {
 	font-family: 'Wisdom Script', cursive;
@@ -197,14 +177,13 @@ footer span {
 
 /***** TABLET BREAKPOINT *****/
 
-@media all and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
     
-    header nav ul {
+    /* header nav ul {
     display: flex;
     justify-content: center;
     flex-flow: row nowrap;
 }
-    
     .bottom-section {
         display: flex;
         flex-flow: row nowrap;
@@ -224,11 +203,12 @@ footer span {
     
     .section-one {
         margin-top: -9px;
-    }
+    } 
     
     .section-two {
         border-right: 1px solid #eee;
-        border-left: 1px solid #eee;;
+        border-left: 1px solid #eee;
+        padding: 0 20px;
     }
     
     .section-three {
@@ -236,22 +216,43 @@ footer span {
     }
     footer {
         border-top: none;
+    } */
+    
+    .bottom-section {
+        justify-content: space-between;
+        align-items: flex-start;
+        border-top: 1px solid #eee;
+    }
+    
+    .section-one, .section-two, .section-three {
+        border-top: none;
+        flex-basis: 30%;
+    }
+    
+    .section-two {
+        border-right: 1px solid #eee;
+        border-left: 1px solid #eee;
+        padding: 0 20px;
     }
 }
 
 /***** DESKTOP BREAKPOINT *****/
 
-@media all and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
     header {
-        width: 100%;
-        display: flex;
         justify-content: space-between;
 
     }
     
     header h1{
+        width: 30%;
         border-bottom: none;
-        padding: 38px 0;
+        padding: 0;
+        text-align: left;
+    }
+    
+    header nav {
+        width: 40%;
     }
     
     header nav ul {
